k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

  labels:
    name: myingress
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          # - path: /
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: react-service
          #       port:
          #         number: 80
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: graphql-service
                port:
                  number: 4000
